# mastering_python_s1

./: .gitignore  0 presentation.html  0 presentation.quarto_ipynb  1 The Basics.ipynb  2 Char No Type Hints.ipynb  3 Char With Type Hints.ipynb  4 Char Pydantic for API.ipynb  5 Advanced Type Hints.ipynb  6 What has changed.ipynb  6 What has recently changed.ipynb  LICENSE  README.html  README.md  Walkthrough_no_type_hints.ipynb  Walkthrough_pydantic.ipynb  Walkthrough_with_type_hints copy 2.ipynb  XA The Basics.ipynb  XB Char No Type Hints.ipynb  XC Char With Type Hints.ipynb  XD Char Pydantic for API.ipynb  api.py  character_new.py  character_old_school.py  character_pyd.py  cli.py  domain.py  example_types.py  main.py  pyproject.toml  test.py
Jupyter Notebooks/: 2 Char No Type Hints.ipynb  6 What has changed.ipynb
examples/: example_pydantic.py  example_types.py  test.py
notebooks/: 01 The Basics.ipynb  3 Char With Type Hints.ipynb  6 What has changed.ipynb
presentation/: 0 presentation.html  0 presentation.qmd  0 presentation.quarto_ipynb  example.html  example.qmd  index.html  presentation.html  presentation.qmd  styles.css
presentations/: 01presentation_foundational_types.qmd  01presentation_say_hi.qmd  02presentation_flee_you_fools.qmd  02presentation_unions_optional_collections.qmd  03presentation_literal_typedict copy.qmd  03presentation_role_playing_game.qmd  04presentation_advanced_types.qmd  04presentation_pydantic.qmd  05presentation_advanced_types.qmd  05presentation_what_has_changed.qmd  06presentation_what_has_changed.qmd  _quarto.yml  domain.py  (+5 more)
(+3 files in other folders)
