[project]
name = "mastering-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
    "quarto>=0.1.0",
]
