[project]
name = "mastering-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "fire>=0.7.1",
    "ipykernel>=7.1.0",
    "nanoid>=2.0.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
    "quarto>=0.1.0",
    "typer>=0.21.1",
]

[project.scripts]
character = "cli:main"

[tool.setuptools]
py-modules = ["cli", "domain"]